# ai-tribunal-env

./: AGENTS.md  AI_Tribunal_Training.ipynb  Dockerfile  README.md  __init__.py  blog.md  generate_mock_plots.py  gradio_ui.py  inference.py  models.py  openenv.yaml  pyproject.toml  train_tribunal_grpo.py
server/: __init__.py  ai_judge.py  app.py  case_generator.py  cases.py  grader.py  precedent_engine.py  requirements.txt  tribunal_environment.py
static/: game.js  index.html  style.css
