[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tribunal-env"
version = "0.1.0"
description = "AI Tribunal Environment — OpenEnv-compatible adversarial legal reasoning environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["openenv-core>=0.2.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
server = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "openai>=1.0.0", "requests>=2.25.0"]
